Add get with Atomic load

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,28 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashbrown = "0.13.1"
+serde = { version = "1.0.126", features = ["derive"] }
+serde_json = "1.0.64"
+libmath ="0.2.1"
+rand = "0.8.5"
+aes-prng = "0.2.0"
+seahash ="4.1.0"
+crossbeam="0.8.2"
+crossbeam-channel = "0.5.6"
+parking_lot = "0.12.1"
+seize = "0.2.1"
+syncpool = "0.1.6"
+concache= "0.2.1"
+num_cpus = "1.12.0"
+rayon = {version = "1.3", optional = true}
+
+
+
+[dependencies.xxhash-rust]
+version = "0.8.5"
+features = ["xxh3", "const_xxh3"]
+
+[dependencies.ahash]
+version = "0.7.6"
+default-features = false
