--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ concache= "0.2.1"
 num_cpus = "1.12.0"
 rayon = {version = "1.3", optional = true}
 
+[dev-dependencies]
+rand = "0.8"
+rayon = "1.3"
+criterion = "0.4.0"
 
 
 [dependencies.xxhash-rust]
