--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-authors = ["Behrouz <behrouz.r.fa@gmail.com>"]
 name = "syncmap"
-version = "0.1.0"
+authors = ["Behrouz <behrouz.r.fa@gmail.com>"]
+version = "0.1.1"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 homepage = "https://github.com/behrouz-rfa/syncmap"
 repository = "https://github.com/behrouz-rfa/syncmap"
 documentation = "https://github.com/behrouz-rfa/syncmap"
-
 description = """
 syncmap is a fast, concurrent cache library built with a focus on performance and correctness.
 The motivation to build syncmap comes from the sync.Map in Golang.
 """
 keywords = ["hashmap", "syn","map"]
+readme = "README.md"
+license = "MIT"
 
 [dependencies]
 hashbrown = "0.13.1"
